--- a/lib/pento_web/live/components/producst_form/form_component.html.heex
+++ b/lib/pento_web/live/components/producst_form/form_component.html.heex
@@ -1,11 +1,11 @@
 <div>
   <h2><%= @title %></h2>
-
+  <!-- El phx-target me permite enviar el evento a otro componente o a el mismo -->
   <.form
     let={f}
     for={@changeset}
     id="product-form"
-    phx-target={@myself}
+    phx-target={@myself} 
     phx-change="validate"
     phx-submit="save">
   
