--- a/lib/pento_web/live/page/survey/survey_live.html.heex
+++ b/lib/pento_web/live/page/survey/survey_live.html.heex
@@ -1,6 +1,8 @@
 <section class="row">
     <h1>Survey</h1>
 </section>
-<section class="row">
-    <HeroComponent.hero content="Hello from a Function Component" />
-</section>
+<%= if @demographic do %>
+        <Show.details demographic={@demographic} />
+    <% else %>
+        <.live_component module={PentoWeb.DemographicLive.Form} id="demographic-form" user={@current_user} />
+<% end %>
